<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/bcg_login"
    >

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/logo_login"
        android:paddingLeft="68dp"
        android:paddingRight="68dp"
        android:paddingBottom="120dp"
        android:paddingTop="120dp"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        />

    <EditText
        android:id="@+id/et_username"
        style="@style/MainEditText"
        android:hint="@string/username"
        android:drawableLeft="@drawable/ic_username"
        android:imeOptions="actionNext"
        android:inputType="text"
        tools:text="tesonet"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        />

    <EditText
        android:id="@+id/et_password"
        style="@style/MainEditText"
        android:hint="@string/password"
        android:drawableLeft="@drawable/ic_lock"
        android:layout_marginTop="@dimen/margin_medium"
        android:imeOptions="actionDone"
        android:inputType="textPassword"
        tools:text="tesonet"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        />

    <Button
        android:id="@+id/btn_login"
        style="@style/MainButton"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/login"
        android:enabled="false"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginLeft="@dimen/margin_huge"
        android:layout_marginRight="@dimen/margin_huge"
        />
</LinearLayout>