<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".features.feed.FeedActivity"
    tools:showIn="@layout/activity_feed">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/feed_content_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/activity_horizontal_margin"
            android:weightSum="4"
            android:background="@android:color/white">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:paddingTop="6dip"
                android:layout_weight="3"
                android:text="SERVER"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingBottom="2dip"
                android:layout_weight="1"
                android:text="DISTANCE"/>
        </LinearLayout>

        <ListView
            android:id="@+id/list"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"/>
    </LinearLayout>


</android.support.constraint.ConstraintLayout>