<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="model"
            type="login.presentation.LoginViewModel" />
    </data>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        enabled="@{false}"
        refreshing="@{model.refreshing}"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="login.ui.LoginActivity">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include layout="@layout/background" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="300dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:paddingBottom="16dp">

                <TextView
                    android:id="@+id/title"
                    style="@style/LoginLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    app:layout_constraintBottom_toTopOf="@id/username_layout"
                    app:layout_constraintStart_toStartOf="parent" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/username_layout"
                    style="@style/TextInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintBottom_toTopOf="@id/password_layout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/user_name"
                        style="@style/TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:text="@={model.username}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    style="@style/TextInputLayout"
                    errorText="@{model.error}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:errorEnabled="true"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        style="@style/TextInputEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:text="@={model.password}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login"
                    style="@style/MaterialButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:onClick="@{model::login}"
                    android:text="@string/log_in"
                    app:layout_constraintTop_toBottomOf="@id/password_layout" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </FrameLayout>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</layout>